# KittenShows

./: .env.exmaple  README.MD  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
fastapi-application/: .env.exmaple  main.py
fastapi-application/alembic/versions/: 2024_10_05_0114-6d4d6f9d6b87_create_kitten_table.py
fastapi-application/api/api_v1/: __init__.py  breeds.py  kittens.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  models.py
fastapi-application/core/schemas/: breeds.py  kittens.py
fastapi-application/crud/: breeds.py  kittens.py
fastapi-application/tests/: conftest.py  test_breeds.py  test_kittens.py
